# bassalt

./: .gitignore  CLAUDE.md  DEPTH_BINDGROUP_ISSUES.md  build.gradle  gradle.properties  package-lock.json  renderdoc_attach.sh  renderdoc_capture.sh
bassalt-native/: Cargo.toml  test_shader_parse.rs
bassalt-native/docs/: WGPU_MC_PATTERNS.md
bassalt-native/src/: adapter.rs  atlas.rs  bind_group.rs  bind_group_layouts.rs  buffer.rs  command.rs  context.rs  device.rs  error.rs  java_logger.rs  lib.rs  msaa.rs  pipeline.rs  pipeline_registry.rs  range_allocator.rs  render_bundle.rs  render_pass.rs  resource_handles.rs  sampler.rs  shader.rs  shader_processor.rs  shader_reflection.rs  shader_validator.rs  surface.rs  texture.rs  texture_and_view.rs  timestamp_queries.rs
bassalt-native/src/jni/: env.rs  handles.rs  mod.rs  strings.rs
bassalt-native/src/shaders/: blit.wgsl
docs/: RENDERDOC_DEBUGGING.md
scripts/: convert_shaders.py
src/main/java/com/criticalrange/: Bassaltrenderer.java
src/main/java/com/criticalrange/mixin/: ExampleMixin.java
src/main/resources/: basaltrenderer.mixins.json  fabric.mod.json
src/main/resources/shaders/wgsl/core/: animate_sprite.frag.wgsl  animate_sprite.vert.wgsl  animate_sprite_blit.frag.wgsl  animate_sprite_blit.vert.wgsl  animate_sprite_blit.wgsl  animate_sprite_interpolate.frag.wgsl  animate_sprite_interpolate.vert.wgsl  blit_screen.frag.wgsl  blit_screen.vert.wgsl  blit_screen.wgsl  block.frag.wgsl  block.vert.wgsl  debug_point.frag.wgsl  debug_point.vert.wgsl  entity.frag.wgsl  entity.vert.wgsl  entity.wgsl  glint.frag.wgsl  glint.vert.wgsl  gui.frag.wgsl  gui.vert.wgsl  gui.wgsl  lightmap.frag.wgsl  lightmap.vert.wgsl  panorama.frag.wgsl  panorama.vert.wgsl  panorama.wgsl  particle.frag.wgsl  particle.vert.wgsl  particle.wgsl  position.frag.wgsl  position.vert.wgsl  position.wgsl  position_color.frag.wgsl  position_color.vert.wgsl  position_color.wgsl  position_tex.frag.wgsl  position_tex.vert.wgsl  position_tex.wgsl  position_tex_color.frag.wgsl  (+55 more)
src/main/resources/shaders/wgsl/post/: bits.frag.wgsl  blit.frag.wgsl  blit.vert.wgsl  box_blur.frag.wgsl  box_blur.vert.wgsl  box_blur.wgsl  downscale.frag.wgsl  (+11 more)
(+17 files in other folders)
