[package]
name = "bassalt-native"
version = "0.1.0"
edition = "2021"
authors = ["criticalrange"]
description = "WebGPU-based custom renderer for Minecraft Fabric"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebGPU - core rendering
wgpu-core = "27.0"
wgpu-types = "27.0"
wgpu-hal = "27.0"
naga = "27.0"

# JNI
jni = "0.21"

# Error handling and logging
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Concurrency and utilities
parking_lot = "0.12"
once_cell = "1.20"
raw-window-handle = "0.6"
paste = "1.0"
smallvec = "1.11"

[features]
default = ["vulkan", "glsl", "wgsl"]

# Backend features
vulkan = ["wgpu-core/vulkan"]
metal = ["wgpu-core/metal"]
dx12 = ["wgpu-core/dx12"]
gles = ["wgpu-core/gles"]

# Shader language features
spirv = ["naga/spv-in", "wgpu-core/spirv"]
glsl = ["naga/glsl-in", "wgpu-core/glsl"]
wgsl = ["wgpu-core/wgsl"]
