[package]
name = "bassalt-native"
version = "0.1.0"
edition = "2021"
authors = ["criticalrange"]
description = "WebGPU-based custom renderer for Minecraft Fabric"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebGPU - core rendering
wgpu-core = { version = "27.0", features = ["raw-window-handle"] }
wgpu-types = "27.0"
wgpu-hal = "27.0"
naga = { version = "27.0", features = ["wgsl-out", "glsl-in", "spv-in"] }

# JNI
jni = "0.21"

# Error handling and logging
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Concurrency and utilities
parking_lot = "0.12"
once_cell = "1.20"
raw-window-handle = "0.6"
paste = "1.0"
smallvec = "1.11"
lazy_static = "1.4"
hashbrown = "0.16"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
dispatch = "0.2"
objc2 = "0.5"

[features]
default = ["metal", "vulkan", "glsl", "wgsl"]

# Backend features
vulkan = ["wgpu-core/vulkan"]
metal = ["wgpu-core/metal"]
dx12 = ["wgpu-core/dx12"]
gles = ["wgpu-core/gles"]

# Shader language features
spirv = ["naga/spv-in", "wgpu-core/spirv"]
glsl = ["naga/glsl-in", "wgpu-core/glsl"]
wgsl = ["wgpu-core/wgsl"]
